# architecture

./: .releaserc  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py  svg_output.py
src/examples/: 00_stateful_k8s.py  k8s.py
