[tool.poetry]
name = "architecture"
version = "0.1.0"
description = "Architecture diagrams for infrastructure"
authors = ["Siddharth Rawat <rawat.sid@northeastern.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
